# Warr-BlueRed

./: Assaltrifle.h  AssaultTrooper.h  CMakeLists.txt  Character.h  HoldBreath.h  Physicalfeature.h  README.md  Sniper.h  Sniperrifle.h  Stamina.h  Weapon.h  main.cpp
